# optimizer

./: .clang-format  .gitignore  AllTests.cpp  AllTests.h  AllTests.hpp  CMakeLists.txt  CMakeLists.txt_bak  LICENSE  Makefile  PSO_sample.c  README.md  RunAllTests.sh  cplusplus.md  cpputest_knowhow.md  cputest_manual.md  psosample_byGPT.cpp  run_tests.sh  test  test.cpp
DE/: DE.cpp  DE.h  test_DE.cpp
Handler/: Handler.cpp  Handler.h
LM/: LM.cpp  LM.h  test_LM.cpp
Optimizer/: Optimizer.cpp  Optimizer.h  Optimizer.hpp
PSO/: PSO.cpp  PSO.h  test_PSO.cpp
config/: developer.cfg  para.cfg  params_sample.csv
core/: EvalResult.h  EvalResult.hpp  IDifferentiableObjective.h  IDifferentiableObjective.hpp  IObjective.h  IObjective.hpp  JacobianResult.h  core.hpp
demo/: DemoDataLoader.cpp  DemoDataLoader.h  DemoDataLoader2.cpp  DemoDataLoader2.h  DemoDataLoader3.cpp  DemoDataLoader3.h  DemoPhysicalModel.cpp  DemoPhysicalModel.h  DemoPhysicalModel2.cpp  DemoPhysicalModel2.h  DemoPhysicalModel3.cpp  DemoPhysicalModel3.h  README_DEMO.txt  demo_main.cpp
docs/: CODE_READING_GUIDE.md  COIL_STARTUP_FLOW.md  CURRENT_CONFIG.md  IMPROVEMENT_PLAN.md  ONSITE_LAYOUT_PROPOSAL.md  OPTIMIZER_PARAMS.md  REFACTORING_PROPOSAL.md  REFACTORING_PROPOSAL_ONSITE.md  USERWORK.md
integrate/: README.md
mock/: Demo.cpp  Demo.h  Demo.hpp  Mock.cpp  Mock.h  Mock.hpp  README_DEMO.txt  ResultWriterStub.cpp  ResultWriterStub.h  ResultWriterStub.hpp  demo_main.cpp
model/: IPhysicalModel.h  IProductDataLoader.h  IProductDataLoader.hpp  MockPhysicalModel.cpp  MockPhysicalModel.h  MockProductDataLoader.cpp  MockProductDataLoader.h
objective/: Objective.cpp  (+2 more)
(+90 files in other folders)
